--- a/_includes/mailchimp.html
+++ b/_includes/mailchimp.html
@@ -1,20 +1,30 @@
-<!-- Begin MailChimp Signup Form -->
-<link href="//cdn-images.mailchimp.com/embedcode/horizontal-slim-10_7.css" rel="stylesheet" type="text/css">
-<style type="text/css">
-	#mc_embed_signup{background:#fff; clear:left; font:14px Helvetica,Arial,sans-serif; width:100%;}
-	/* Add your own MailChimp form style overrides in your site stylesheet or in this style block.
-	   We recommend moving this block and the preceding CSS link to the HEAD of your HTML file. */
-</style>
-<div id="mc_embed_signup">
-<form action="https://somethingindependent.us6.list-manage.com/subscribe/post?u=aa87d384c8&amp;id=f15b1fc087" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
-    <div id="mc_embed_signup_scroll">
-	<label for="mce-EMAIL">Stay up to date</label>
-	<input type="email" value="" name="EMAIL" class="email" id="mce-EMAIL" placeholder="email address" required>
-    <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
-    <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_aa87d384c8_f15b1fc087" tabindex="-1" value=""></div>
-    <div class="clear"><input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button"></div>
-    </div>
-</form>
-</div>
+<section class="email-form">
+  <h2 class="form-header">Register to receive updates</h2>
 
-<!--End mc_embed_signup-->
+  <!-- Begin MailChimp Signup Form -->
+  <div id="mc_embed_signup">
+  <form action="https://somethingindependent.us6.list-manage.com/subscribe/post?u=aa87d384c8&amp;id=f15b1fc087" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
+      <div id="mc_embed_signup_scroll">
+    
+  <div class="mc-field-group">
+    <input type="email" value="" name="EMAIL" class="required email" placeholder="Email Address" id="mce-EMAIL">
+  </div>
+  <div class="mc-field-group input-group" style="display: none">
+      <strong>Which program(s) are you interested in? </strong>
+      <ul><li><input type="checkbox" value="1" name="group[19365][1]" id="mce-group[19365]-19365-0"><label for="mce-group[19365]-19365-0">The Wright</label></li>
+  <li><input type="checkbox" value="2" name="group[19365][2]" id="mce-group[19365]-19365-1"><label for="mce-group[19365]-19365-1">S|I OutPost</label></li>
+  <li><input type="checkbox" value="4" checked="checked" name="group[19365][4]" id="mce-group[19365]-19365-2"><label for="mce-group[19365]-19365-2">Trade School</label></li>
+  </ul>
+  </div>
+    <div id="mce-responses" class="clear">
+      <div class="response" id="mce-error-response" style="display:none"></div>
+      <div class="response" id="mce-success-response" style="display:none"></div>
+    </div>    <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
+      <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_aa87d384c8_f15b1fc087" tabindex="-1" value=""></div>
+      <div class="clear"><input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button"></div>
+      </div>
+  </form>
+  </div>
+
+  <!--End mc_embed_signup-->
+</section>
