--- a/_sass/minima/_base.scss
+++ b/_sass/minima/_base.scss
@@ -9,7 +9,6 @@ dl, dd, ol, ul, figure {
 }
 
 
-
 /**
  * Basic styling
  */
@@ -82,9 +81,9 @@ li {
  * Headings
  */
 h1, h2, h3, h4, h5, h6 {
-  font-weight: $base-font-weight;
+  font-family: $heading-font-family;
+  font-weight: $heading-font-weight;
 }
-
 
 
 /**
