--- a/_sass/minima/_layout.scss
+++ b/_sass/minima/_layout.scss
@@ -1,106 +1,112 @@
-/**
- * Site header
- */
 .site-header {
-  border-top: 5px solid $grey-color-dark;
-  border-bottom: 1px solid $grey-color-light;
-  min-height: $spacing-unit * 1.865;
-
-  // Positioning context for the mobile navigation icon
-  position: relative;
+  background-image: url('/assets/bark_topo_pattern.png');
+  background-position: center center;
+  background-repeat: no-repeat;
+  background-size: cover;
 }
 
 .site-title {
-  @include relative-font-size(1.625);
-  font-weight: 300;
-  line-height: $base-line-height * $base-font-size * 2.25;
-  letter-spacing: -1px;
-  margin-bottom: 0;
-  float: left;
-
-  &,
-  &:visited {
-    color: $grey-color-dark;
-  }
+  font-size: ms(5);
+  font-family: $heading-font-family;
+  font-weight: $heading-font-weight;
+  line-height: 1;
+  padding-top: $spacing-unit;
 }
+
+.site-subtitle {
+  font-size: ms(2);
+  font-family: $heading-font-family;
+  font-weight: $heading-font-weight;
+  line-height: 1;
+}
+
+.site-tagline {
+  font-size: ms(1);
+  font-family: $heading-font-family;
+  font-weight: $heading-font-weight;
+}
+
+/**
+ * Site nav
+ */
 
 .site-nav {
-  float: right;
-  line-height: $base-line-height * $base-font-size * 2.25;
+  padding: $spacing-unit 0;
+  background-color: $navy-color;
+}
 
-  .nav-trigger {
-      display: none;
-  }
+.site-nav ul {
+  list-style-type: none;
+  margin: auto;
+  padding: 0;
+  text-align: center;
+}
 
-  .menu-icon {
-    display: none;
-  }
+.site-nav li {
+  display: inline-block;
+}
 
-  .page-link {
-    color: $text-color;
-    line-height: $base-line-height;
-
-    // Gaps between nav items, but not on the last one
-    &:not(:last-child) {
-      margin-right: 20px;
-    }
-  }
-
-  @include media-query($on-palm) {
-    position: absolute;
-    top: 9px;
-    right: $spacing-unit / 2;
-    background-color: $background-color;
-    border: 1px solid $grey-color-light;
-    border-radius: 5px;
-    text-align: right;
-
-    label[for="nav-trigger"] {
-      display: block;
-      float: right;
-      width: 36px;
-      height: 36px;
-      z-index: 2;
-      cursor: pointer;
-    }
-
-    .menu-icon {
-      display: block;
-      float: right;
-      width: 36px;
-      height: 26px;
-      line-height: 0;
-      padding-top: 10px;
-      text-align: center;
-
-      > svg path {
-        fill: $grey-color-dark;
-      }
-    }
-
-    input ~ .trigger {
-      clear: both;
-      display: none;
-    }
-
-    input:checked ~ .trigger {
-      display: block;
-      padding-bottom: 5px;
-    }
-
-    .page-link {
-      display: block;
-      padding: 5px 10px;
-
-      &:not(:last-child) {
-        margin-right: 0;
-      }
-      margin-left: 20px;
-    }
-  }
+.site-nav li a {
+  font-size: ms(1);
+  font-family: $heading-font-family;
+  font-weight: $heading-font-weight;
+  margin: 1em;
+  color: $background-color;
 }
 
 
+/**
+ * E-mail form
+ */
+
+.email-form {
+  padding: $spacing-unit 0;
+  margin: auto;
+  text-align: center;
+  width: 60%;
+
+  @include media-query($on-palm) {
+    margin: auto 0;
+    width: 100%;
+  }
+}
+
+.email-form .form-header {
+  font-size: ms(2);
+}
+
+.email-form form {
+  margin: auto 0;
+}
+
+.email-form input[type="email"] {
+  font-family: $heading-font-family;
+  font-size: ms(1);
+  padding: $spacing-unit / 2;
+  margin: $spacing-unit / 2 0;
+  background-color: $grey-color;
+  color: $background-color;
+  text-decoration: none;
+  border: none;
+  width: calc(100% - #{$spacing-unit});
+  width: -webkit-calc(100% - #{$spacing-unit});
+
+  &:focus, &::placeholder {
+    color: inherit;
+  }
+}
+
+.email-form input[type="submit"] {
+  font-family: $heading-font-family;
+  font-size: ms(1);
+  padding: $spacing-unit / 2;
+  margin: $spacing-unit / 2 0;
+  background-color: $aqua-color;
+  color: $background-color;
+  text-decoration: none;
+  border: none;
+  width: 100%;
+}
 
 /**
  * Site footer
