Get nav anchors working properly

--- a/_includes/artists.html
+++ b/_includes/artists.html
@@ -1,4 +1,4 @@
-<h1><a name="artists">The Artists</a></h1>
+<h1><a name="art">The Artists</a></h1>
 
 Three artists - Jack Ludlam, Sarah Uhl, and John Fellows - have come together to create the backdrop of Trade School. Playing off of the theme ‘the nature of work’, the artists will assemble individual and collective works showcasing their unique take on work and how they have applied themselves as professional artists in and around the outdoor industry. 
 
