WIP content updates

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,9 +1,7 @@
 <header class="site-header" role="banner">
 
   <div class="wrapper">
-    <h1 class="site-title">Trade School</h1>
-    <h3 class="site-tagline">Exploring the nature of work</h3>
-    <h2 class="site-subtitle">January 25 &mdash; 29, 2018</h2>
+    {% comment %} <h1 class="site-title">Trade School</h1> {% endcomment %}
   </div>
 </header>
 
