--- a/_includes/mailchimp.html
+++ b/_includes/mailchimp.html
@@ -1,5 +1,5 @@
 <section class="email-form">
-  <h2 class="form-header">Register to receive updates</h2>
+  <h2 class="form-header">Sign up for news &amp; updates</h2>
 
   <!-- Begin MailChimp Signup Form -->
   <div id="mc_embed_signup">
