--- a/_includes/artists.html
+++ b/_includes/artists.html
@@ -6,7 +6,7 @@ Three artists - Jack Ludlam, Sarah Uhl, and John Fellows - have come together to
   <a class="artist-cell" href="http://www.jackludlam.com/">
     <img class="artist-photo" src="/assets/ludlam_trees.jpg" />
     <h3>Jack Ludlam</h3>
-    <em>Dedicated to the makers and their tools</em>
+    <h5>Dedicated to the makers and their tools</h5>
     <div class="artist-description">
       Jack Ludlam is a photographer based out of Denver Colorado. Jack’s photographs primarily focus on the people and objects that represent a different generation of the proletariat. Jack has been interested in the traditional meaning of "work" since growing up on farms in Ohio. 
     </div>
@@ -15,7 +15,7 @@ Three artists - Jack Ludlam, Sarah Uhl, and John Fellows - have come together to
   <a class="artist-cell" href="http://sarahuhl.com/">
     <img class="artist-photo" src="/assets/uhl_mountains.jpg" />
     <h3>Sarah Virginia Uhl</h3>
-    <em>Joy evangelist on a hunt for adventure through art and advocacy for the land</em>
+    <h5>Joy evangelist on a hunt for adventure through art and advocacy for the land</h5>
     <div class="artist-description">
       Sarah Uhl is an artist and advocate for the land, based out of Carbondale, Colorado. She is dedicated to making art that plays a role in the protection of public lands, clean water and climate issues. Sarah partners with brands and organizations who would like to amplify their messaging through art, visual storytelling and Live Art performances at festivals and events.
     </div>
@@ -24,7 +24,7 @@ Three artists - Jack Ludlam, Sarah Uhl, and John Fellows - have come together to
   <a class="artist-cell" href="http://johnfellowsart.com/">
     <img class="artist-photo" src="/assets/fellows_mountains.jpg" />
     <h3>John Fellows</h3>
-    <em>Travel, Art, Mountains and Water</em>
+    <h5>Travel, Art, Mountains and Water</h5>
     <div class="artist-description">
       John Fellows’ signature “contemporary folk” style weaves together layers of found paper, graphic block prints and handwritten text to create an old time, hands-on feel. he collects a variety of found paper, maps and books dating from the 1880’s to the present to create unique linoleum carving collages that while at the very base reflect his personal experiences, are more like a brief glimpse into someone else’s story. 
     </div>
