--- a/_sass/minima/_layout.scss
+++ b/_sass/minima/_layout.scss
@@ -1,6 +1,7 @@
 .site-header {
-  background-image: url('/assets/bark_topo_pattern.png');
-  background-position: center center;
+  height: 300px;
+  background-image: url('/assets/TradeSchoolBanner1-01.png');
+  background-position: top center;
   background-repeat: no-repeat;
   background-size: cover;
 }
@@ -31,7 +32,7 @@
  */
 
 .site-nav {
-  padding: $spacing-unit 0;
+  padding: $spacing-unit / 3 0;
   background-color: $navy-color;
 }
 
@@ -60,7 +61,6 @@
  */
 
 .email-form {
-  padding: $spacing-unit 0;
   margin: auto;
   text-align: center;
   width: 60%;
