Update artists copy

--- a/_includes/artists.html
+++ b/_includes/artists.html
@@ -3,16 +3,16 @@
 Three artists - Jack Ludlam, Sarah Uhl, and John Fellows - have come together to create the backdrop of Trade School. Playing off of the theme ‘the nature of work’, the artists will assemble individual and collective works showcasing their unique take on work and how they have applied themselves as professional artists in and around the outdoor industry. 
 
 <div class="artists-container">
-  <a class="artist-cell" href="http://www.jackludlam.com/">
+  <a class="artist-cell" href="http://www.jackludlam.com/" target="_blank">
     <img class="artist-photo" src="/assets/ludlam_trees.jpg" />
     <h3>Jack Ludlam</h3>
     <h5>Dedicated to the makers and their tools</h5>
     <div class="artist-description">
-      Jack Ludlam is a photographer based out of Denver Colorado. Jack’s photographs primarily focus on the people and objects that represent a different generation of the proletariat. Jack has been interested in the traditional meaning of "work" since growing up on farms in Ohio. 
+      Jack Ludlam is a photographer based out of Denver, Colorado. Jack’s photographs primarily focus on the people and objects that represent a different generation of the proletariat. Jack has been interested in the traditional meaning of "work" since growing up on farms in Ohio.
     </div>
   </a>
 
-  <a class="artist-cell" href="http://sarahuhl.com/">
+  <a class="artist-cell" href="http://sarahuhl.com/" target="_blank">
     <img class="artist-photo" src="/assets/uhl_mountains.jpg" />
     <h3>Sarah Virginia Uhl</h3>
     <h5>Joy evangelist on a hunt for adventure through art and advocacy for the land</h5>
@@ -21,12 +21,12 @@ Three artists - Jack Ludlam, Sarah Uhl, and John Fellows - have come together to
     </div>
   </a>
 
-  <a class="artist-cell" href="http://johnfellowsart.com/">
+  <a class="artist-cell" href="http://johnfellowsart.com/" target="_blank">
     <img class="artist-photo" src="/assets/fellows_mountains.jpg" />
     <h3>John Fellows</h3>
     <h5>Travel, Art, Mountains and Water</h5>
     <div class="artist-description">
-      John Fellows’ signature “contemporary folk” style weaves together layers of found paper, graphic block prints and handwritten text to create an old time, hands-on feel. he collects a variety of found paper, maps and books dating from the 1880’s to the present to create unique linoleum carving collages that while at the very base reflect his personal experiences, are more like a brief glimpse into someone else’s story. 
+      John Fellows' signature "contemporary folk" style weaves together layers of found paper, graphic block prints and handwritten text to create an old time, hands-on feel. He collects a variety of found paper, maps and books dating from the 1880s to the present to create unique linoleum carving collages that while at the very base reflect his personal experiences, are more like a brief glimpse into someone else’s story.
     </div>
   </a>
 </div>
