--- a/_sass/minima.scss
+++ b/_sass/minima.scss
@@ -7,6 +7,10 @@ $modularscale: (
   ratio: 1.5
 );
 
+// Fonts
+@import "tradeschool/built_titling";
+@import url('https://fonts.googleapis.com/css?family=Lato');
+
 // Custom color scheme
 $navy-color: #001A70 !default;
 $aqua-color: #19D3C5 !default;
@@ -15,7 +19,7 @@ $brown-color: #503629 !default;
 
 
 // Define defaults for each variable.
-$base-font-family: "Helvetica Neue", Arial, sans-serif !default;
+$base-font-family: "Lato", Arial, sans-serif !default;
 $base-font-size:   16px !default;
 $base-font-weight: 400 !default;
 $small-font-size:  $base-font-size * 0.875 !default;
@@ -61,7 +65,6 @@ $on-laptop:        800px !default;
 
 // Import partials.
 @import
-  "tradeschool/built_titling",
   "minima/base",
   "minima/layout"
 ;
