Add alt tags to artist images

--- a/_includes/artists.html
+++ b/_includes/artists.html
@@ -4,7 +4,7 @@ Three artists - Jack Ludlam, Sarah Uhl, and John Fellows - have come together to
 
 <div class="artists-container">
   <a class="artist-cell" href="http://www.jackludlam.com/" target="_blank">
-    <img class="artist-photo" src="/assets/ludlam_trees.jpg" />
+    <img class="artist-photo" src="/assets/ludlam_trees.jpg" alt="Jack Ludlam" />
     <h3>Jack Ludlam</h3>
     <h5>Dedicated to the makers and their tools</h5>
     <div class="artist-description">
@@ -13,7 +13,7 @@ Three artists - Jack Ludlam, Sarah Uhl, and John Fellows - have come together to
   </a>
 
   <a class="artist-cell" href="http://sarahuhl.com/" target="_blank">
-    <img class="artist-photo" src="/assets/uhl_mountains.jpg" />
+    <img class="artist-photo" src="/assets/uhl_mountains.jpg" alt="Sarah Virginia Uhl" />
     <h3>Sarah Virginia Uhl</h3>
     <h5>Joy evangelist on a hunt for adventure through art and advocacy for the land</h5>
     <div class="artist-description">
@@ -22,7 +22,7 @@ Three artists - Jack Ludlam, Sarah Uhl, and John Fellows - have come together to
   </a>
 
   <a class="artist-cell" href="http://johnfellowsart.com/" target="_blank">
-    <img class="artist-photo" src="/assets/fellows_mountains.jpg" />
+    <img class="artist-photo" src="/assets/fellows_mountains.jpg" alt="John Fellows" />
     <h3>John Fellows</h3>
     <h5>Travel, Art, Mountains and Water</h5>
     <div class="artist-description">
