--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -11,9 +11,13 @@
       <div class="wrapper">
         {{ content }}
       </div>
+
+      {% include sponsors.html %}
     </main>
 
+
     {% include footer.html %}
+
 
   </body>
 
