--- a/_includes/artists.html
+++ b/_includes/artists.html
@@ -1,32 +1,44 @@
 <h1><a name="art">The Artists</a></h1>
 
-Three artists - Jack Ludlam, Sarah Uhl, and John Fellows - have come together to create the backdrop of Trade School. Playing off of the theme ‘the nature of work’, the artists will assemble individual and collective works showcasing their unique take on work and how they have applied themselves as professional artists in and around the outdoor industry. 
+Three artists have come together to create the backdrop of Trade School. Playing off of the theme ‘the nature of work’, the artists will assemble individual and collective works showcasing their unique take on work and how they have applied themselves as professional artists in and around the outdoor industry.
 
 <div class="artists-container">
-  <a class="artist-cell" href="http://www.jackludlam.com/" target="_blank">
-    <img class="artist-photo" src="/assets/ludlam_trees.jpg" alt="Jack Ludlam" />
-    <h3>Jack Ludlam</h3>
-    <h5>Dedicated to the makers and their tools</h5>
+  <div class="artist-cell">
+    <a href="http://jackludlam.com/" class="artist-photo">
+      <img src="/assets/ludlam-trees.jpg" alt="Jack Ludlam" />
+    </a>
     <div class="artist-description">
-      Jack Ludlam is a photographer based out of Denver, Colorado. Jack’s photographs primarily focus on the people and objects that represent a different generation of the proletariat. Jack has been interested in the traditional meaning of "work" since growing up on farms in Ohio.
+      <h3><a href="http://www.jackludlam.com/">Jack Ludlam</a></h3>
+      <div class="artist-tagline">Dedicated to the makers and their tools</div>
+      <p>
+        Jack Ludlam is a photographer based out of Denver, Colorado. Jack’s photographs primarily focus on the people and objects that represent a different generation of the proletariat. Jack has been interested in the traditional meaning of "work" since growing up on farms in Ohio.
+      </p>
     </div>
-  </a>
+  </div>
 
-  <a class="artist-cell" href="http://sarahuhl.com/" target="_blank">
-    <img class="artist-photo" src="/assets/uhl_mountains.jpg" alt="Sarah Virginia Uhl" />
-    <h3>Sarah Virginia Uhl</h3>
-    <h5>Joy evangelist on a hunt for adventure through art and advocacy for the land</h5>
+  <div class="artist-cell">
+    <a href="http://sarahuhl.com/" class="artist-photo">
+      <img src="/assets/sarah-uhl-large.jpg" alt="Sarah Uhl" />
+    </a>
     <div class="artist-description">
-      Sarah Uhl is an artist and advocate for the land, based out of Carbondale, Colorado. She is dedicated to making art that plays a role in the protection of public lands, clean water and climate issues. Sarah partners with brands and organizations who would like to amplify their messaging through art, visual storytelling and Live Art performances at festivals and events.
+      <h3><a href="http://sarahuhl.com/">Sarah Virginia Uhl</a></h3>
+      <div class="artist-tagline">Joy evangelist on a hunt for adventure through art and advocacy for the land</div>
+      <p>
+        Sarah Uhl is an artist and advocate for the land, based out of Carbondale, Colorado. She is dedicated to making art that plays a role in the protection of public lands, clean water and climate issues. Sarah partners with brands and organizations who would like to amplify their messaging through art, visual storytelling and Live Art performances at festivals and events.
+      </p>
     </div>
-  </a>
+  </div>
 
-  <a class="artist-cell" href="http://johnfellowsart.com/" target="_blank">
-    <img class="artist-photo" src="/assets/fellows_mountains.jpg" alt="John Fellows" />
-    <h3>John Fellows</h3>
-    <h5>Travel, Art, Mountains and Water</h5>
+  <div class="artist-cell">
+    <a href="http://johnfellowsart.com/" class="artist-photo">
+      <img src="/assets/fellows-mountains.jpg" alt="John Fellows" />
+    </a>
     <div class="artist-description">
-      John Fellows' signature "contemporary folk" style weaves together layers of found paper, graphic block prints and handwritten text to create an old time, hands-on feel. He collects a variety of found paper, maps and books dating from the 1880s to the present to create unique linoleum carving collages that while at the very base reflect his personal experiences, are more like a brief glimpse into someone else’s story.
+      <h3><a href="http://johnfellowsart.com/">John Fellows</a></h3>
+      <div class="artist-tagline">Travel, Art, Mountains and Water</div>
+      <p>
+        John Fellows' signature "contemporary folk" style weaves together layers of found paper, graphic block prints and handwritten text to create an old time, hands-on feel. He collects a variety of found paper, maps and books dating from the 1880s to the present to create unique linoleum carving collages that while at the very base reflect his personal experiences, are more like a brief glimpse into someone else’s story.
+      </p>
     </div>
-  </a>
+  </div>
 </div>
