--- a/_sass/minima/_layout.scss
+++ b/_sass/minima/_layout.scss
@@ -130,26 +130,39 @@
 }
 
 
-.artist-cell {
-  padding: $spacing-unit 0;
-  margin: $spacing-unit auto;
-  text-align: center;
-  width: calc(33% - #{$spacing-unit});
-  width: -webkit-calc(33% - #{$spacing-unit});
+.artist-photo {
+  width: 50%;
+  margin: 0;
+  padding: 0;
+  float: left;
 
   @include media-query($on-palm) {
-    margin: $spacing-unit 0;
     width: 100%;
-  }
-
-  &:hover {
-    text-decoration: none;
   }
 }
 
-.artist-photo {
-  height: 150px;
-  margin-bottom: 15px;
+.artist-cell {
+  margin-bottom: $spacing-unit;
+}
+
+.artist-description {
+  margin: 0;
+  padding: 0 $spacing-unit;
+  float: right;
+  font-size: ms(0);
+  width: -webkit-calc(50% - (#{$spacing-unit * 2}));
+  width:         calc(50% - (#{$spacing-unit * 2}));
+
+  @include media-query($on-palm) {
+    width: -webkit-calc(100% - (#{$spacing-unit * 2}));
+    width:         calc(100% - (#{$spacing-unit * 2}));
+  }
+}
+
+.artist-tagline {
+  font-style: italic;
+  font-size: ms(0);
+  margin-bottom: $spacing-unit / 2;
 }
 
 /**
