Update copy and artist layout

--- a/_includes/artists.html
+++ b/_includes/artists.html
@@ -1,8 +1,21 @@
-<h1><a name="art">The Artists</a></h1>
+<h1><a name="art">Artists</a></h1>
 
-Three artists have come together to create the backdrop of Trade School. Playing off of the theme ‘the nature of work’, the artists will assemble individual and collective works showcasing their unique take on work and how they have applied themselves as professional artists in and around the outdoor industry.
+Three artists have come together to create the backdrop of Trade School. Playing off of the theme ‘the nature of work’, the artists assemble individual and collective works showcasing their unique take on work and how they have applied themselves as professional artists in and around the outdoor industry.
 
 <div class="artists-container">
+  <div class="artist-cell">
+    <a href="http://sarahuhl.com/" class="artist-photo">
+      <img src="/assets/sarah-uhl-large.jpg" alt="Sarah Uhl" />
+    </a>
+    <div class="artist-description">
+      <h3><a href="http://sarahuhl.com/">Sarah Virginia Uhl</a></h3>
+      <div class="artist-tagline">Joy evangelist on a hunt for adventure through art and advocacy for the land</div>
+      <p>
+        Sarah Uhl is an artist and advocate for the land, based out of Carbondale, Colorado. She is dedicated to making art that plays a role in the protection of public lands, clean water and climate issues. Sarah partners with brands and organizations who would like to amplify their messaging through art, visual storytelling and Live Art performances at festivals and events.
+      </p>
+    </div>
+  </div>
+
   <div class="artist-cell">
     <a href="http://jackludlam.com/" class="artist-photo">
       <img src="/assets/ludlam-trees.jpg" alt="Jack Ludlam" />
@@ -16,18 +29,6 @@ Three artists have come together to create the backdrop of Trade School. Playing
     </div>
   </div>
 
-  <div class="artist-cell">
-    <a href="http://sarahuhl.com/" class="artist-photo">
-      <img src="/assets/sarah-uhl-large.jpg" alt="Sarah Uhl" />
-    </a>
-    <div class="artist-description">
-      <h3><a href="http://sarahuhl.com/">Sarah Virginia Uhl</a></h3>
-      <div class="artist-tagline">Joy evangelist on a hunt for adventure through art and advocacy for the land</div>
-      <p>
-        Sarah Uhl is an artist and advocate for the land, based out of Carbondale, Colorado. She is dedicated to making art that plays a role in the protection of public lands, clean water and climate issues. Sarah partners with brands and organizations who would like to amplify their messaging through art, visual storytelling and Live Art performances at festivals and events.
-      </p>
-    </div>
-  </div>
 
   <div class="artist-cell">
     <a href="http://johnfellowsart.com/" class="artist-photo">
