--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,20 +1,17 @@
 <header class="site-header" role="banner">
 
   <div class="wrapper">
-    {% comment %} <h1 class="site-title">Trade School</h1> {% endcomment %}
+    <h1 class="site-title">Trade School</h1>
+    <h4 class="site-subtitle">a project of <a href="http://www.somethingindependent.com/">Something Independent</a></h4>
+    <a class="site-subtitle-image" href="http://www.somethingindependent.com/" title="A project of Something Independent">
+      <img src="/assets/si_logo_transparent.png" alt="A project of Something Independent" />
+    </a>
   </div>
+
+  <section class="site-tagline">
+    <div class="wrapper">
+      Five days of art and talks exploring the nature of work
+    </div>
+  </section>
 </header>
-
-<nav class="site-nav" role="navigation">
-  <div class="wrapper">
-    <ul>
-      <li><a href="#art">Art</a></li>
-      <li><a href="#talks">Talks</a></li>
-      <li><A href="#gethere">Get Here</a></li>
-    </ul>
-  </div>
-</nav>
-
-
-
 
