Update navy/aqua colors per Ally

--- a/_sass/minima.scss
+++ b/_sass/minima.scss
@@ -12,8 +12,8 @@ $modularscale: (
 @import url('https://fonts.googleapis.com/css?family=Lato');
 
 // Custom color scheme
-$navy-color: #001A70 !default;
-$aqua-color: #19D3C5 !default;
+$navy-color: #0A2A63 !default;
+$aqua-color: #06BCA1 !default;
 $grey-color: #D0CFCD !default;
 $brown-color: #503629 !default;
 
