Update header styles to be more bold
- Use navy background and white text with transparent topo graphic
- Move S:I logo into the body
- Set up full-widthheaders for sections
- Break apart section markup into different files

--- a/_includes/sponsors.html
+++ b/_includes/sponsors.html
@@ -1,8 +1,10 @@
+<div class="content-section-header">
+  <a name="sponsors">Sponsors</a>
+</div>
 <div class="wrapper">
-  <h1>Sponsors</h1>
 
   <p class="centered-copy">
-    Trade School is presented by <a href="http://www.somethingindependent.com/">Something Independent</a> in partnership with:
+    TRADE SCHOOL is presented by <a href="http://www.somethingindependent.com/">Something Independent</a> and made possible through the support of hard working partners, including:
   </p>
 
   <div class="sponsor-logos">
