--- a/_sass/minima/_layout.scss
+++ b/_sass/minima/_layout.scss
@@ -1,5 +1,19 @@
 .site-header {
-  background-image: url('/assets/bark_topo_pattern.png');
+  background-color: $navy-color;
+  position: relative;
+}
+
+.site-header:before {
+  content : "";
+  display: block;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  opacity : 0.2;
+
+  background-image: url('/assets/bark_topo_pattern_white.png');
   background-position: center center;
   background-repeat: no-repeat;
   background-size: cover;
@@ -12,6 +26,7 @@
   line-height: 1;
   padding-top: $spacing-unit;
   text-align: center;
+  color: $background-color;
 }
 
 .site-subtitle {
@@ -21,21 +36,26 @@
   font-weight: $heading-font-weight;
   line-height: 1;
   text-align: right;
-}
-
-.site-subtitle-image {
-  width: 33%;
-  margin: 0 auto 30px auto;
-  display: block;
+  color: $background-color;
 }
 
 .site-tagline {
   text-align: center;
-  background-color: $navy-color;
+  background-color: $aqua-color;
   color: $background-color;
   font-size: ms(2);
   font-family: $heading-font-family;
   font-weight: $heading-font-weight;
+}
+
+.intro-logo {
+  display: block;
+  margin: $spacing-unit auto;
+  width: 33%;
+
+  @include media-query($on-palm) {
+    width: 80%;
+  }
 }
 
 /**
@@ -44,7 +64,7 @@
 
 .site-nav {
   padding: $spacing-unit / 3 0;
-  background-color: $navy-color;
+  background-color: $aqua-color;
 }
 
 .site-nav ul {
@@ -52,6 +72,8 @@
   margin: auto;
   padding: 0;
   text-align: center;
+  display: flex;
+  justify-content: space-between;
 }
 
 .site-nav li {
@@ -66,6 +88,35 @@
   color: $background-color;
 }
 
+
+/**
+ * Content sections
+ */
+
+.content-section {
+  margin: $spacing-unit auto;
+
+  &.intro p {
+    text-align: center;
+  }
+}
+
+.content-section-header {
+  width: 100%;
+  color: $background-color;
+  background-color: $aqua-color;
+  text-align: center;
+  margin: $spacing-unit 0;
+  padding: $spacing-unit / 2 0;
+  font-size: ms(4);
+  font-family: $heading-font-family;
+  font-weight: $heading-font-weight;
+
+  a, a:hover {
+    color: inherit;
+    text-decoration: none;
+  }
+}
 
 /**
  * E-mail form
