Update artist images per Castle

--- a/_includes/artists.html
+++ b/_includes/artists.html
@@ -3,7 +3,7 @@ Three artists have come together to create the backdrop of Trade School. Playing
 <div class="artists-container">
   <div class="artist-cell">
     <a href="http://sarahuhl.com/" class="artist-photo">
-      <img src="/assets/sarah-uhl-large.jpg" alt="Sarah Uhl" />
+      <img src="/assets/sarah-uhl.jpg" alt="Sarah Uhl" />
     </a>
     <div class="artist-description">
       <h3><a href="http://sarahuhl.com/">Sarah Virginia Uhl</a></h3>
@@ -16,7 +16,7 @@ Three artists have come together to create the backdrop of Trade School. Playing
 
   <div class="artist-cell">
     <a href="http://jackludlam.com/" class="artist-photo">
-      <img src="/assets/ludlam-trees.jpg" alt="Jack Ludlam" />
+      <img src="/assets/jack-ludlam.jpg" alt="Jack Ludlam" />
     </a>
     <div class="artist-description">
       <h3><a href="http://www.jackludlam.com/">Jack Ludlam</a></h3>
@@ -27,10 +27,9 @@ Three artists have come together to create the backdrop of Trade School. Playing
     </div>
   </div>
 
-
   <div class="artist-cell">
     <a href="http://johnfellowsart.com/" class="artist-photo">
-      <img src="/assets/fellows-mountains.jpg" alt="John Fellows" />
+      <img src="/assets/john-fellows.jpg" alt="John Fellows" />
     </a>
     <div class="artist-description">
       <h3><a href="http://johnfellowsart.com/">John Fellows</a></h3>
