--- a/_sass/minima/_layout.scss
+++ b/_sass/minima/_layout.scss
@@ -85,7 +85,7 @@
  */
 
 .content-section {
-  margin: $spacing-unit auto;
+  margin: $spacing-unit auto $spacing-unit * 2 auto;
 
   &.intro p {
     text-align: center;
