Build out session detail pages and index
Fixes #2

--- a/_includes/sponsors.html
+++ b/_includes/sponsors.html
@@ -2,48 +2,50 @@
   <a name="sponsors">Sponsors</a>
 </div>
 <div class="wrapper">
-  <p class="centered-copy">
-    TRADE SCHOOL is presented by <a href="http://www.somethingindependent.com/">Something Independent</a> and made possible through the support of hard working partners, including:
-  </p>
+  <div class="content-section">
+    <p class="centered-copy">
+      TRADE SCHOOL is presented by <a href="http://www.somethingindependent.com/">Something Independent</a> and made possible through the support of hard working partners, including:
+    </p>
 
-  <div class="sponsor-logos">
-    <div class="logo-row-1up">
-      <a href="https://choosecolorado.com/programs-initiatives/outdoor-recreation-industry-office/">
-        <img src="/assets/logos/orec.png" alt="Colorado Outdoor Recreation Industry Office" />
-      </a>
+    <div class="sponsor-logos">
+      <div class="logo-row-1up">
+        <a href="https://choosecolorado.com/programs-initiatives/outdoor-recreation-industry-office/">
+          <img src="/assets/logos/orec.png" alt="Colorado Outdoor Recreation Industry Office" />
+        </a>
+      </div>
+      <div class="logo-row-2up">
+        <a href="http://denvertheatredistrict.com/">
+          <img src="/assets/logos/dtd.png" alt="Denver Theatre District" />
+        </a>
+        <a href="http://wework.com/">
+          <img src="/assets/logos/wework.png" alt="WeWork" />
+        </a>
+      </div>
+      <div class="logo-row-3up">
+        <a href="http://larimersquare.com/">
+          <img src="/assets/logos/larimer-square.png" alt="Larimer Square" />
+        </a>
+        <a href="http://tapinco.org/">
+          <img src="/assets/logos/tapin.png" alt="Tap-IN" />
+        </a>
+        <a href="https://www.nblenergy.com/">
+          <img src="/assets/logos/noble-energy.jpg" alt="Noble Energy" />
+        </a>
+      </div>
+      <div class="logo-row-3up">
+        <a href="http://postmodernco.com/">
+          <img src="/assets/logos/postmodern.png" alt="Postmodern Company" />
+        </a>
+        <a href="http://next100coalition.org/">
+          <img src="/assets/logos/next100.jpg" alt="Next100 Coalition" />
+        </a>
+        <a href="http://getharmonic.com/">
+          <img src="/assets/logos/harmonic.png" alt="Harmonic Media" />
+        </a>
+      </div>
     </div>
-    <div class="logo-row-2up">
-      <a href="http://denvertheatredistrict.com/">
-        <img src="/assets/logos/dtd.png" alt="Denver Theatre District" />
-      </a>
-      <a href="http://wework.com/">
-        <img src="/assets/logos/wework.png" alt="WeWork" />
-      </a>
-    </div>
-    <div class="logo-row-3up">
-      <a href="http://larimersquare.com/">
-        <img src="/assets/logos/larimer-square.png" alt="Larimer Square" />
-      </a>
-      <a href="http://tapinco.org/">
-        <img src="/assets/logos/tapin.png" alt="Tap-IN" />
-      </a>
-      <a href="https://www.nblenergy.com/">
-        <img src="/assets/logos/noble-energy.jpg" alt="Noble Energy" />
-      </a>
-    </div>
-    <div class="logo-row-3up">
-      <a href="http://postmodernco.com/">
-        <img src="/assets/logos/postmodern.png" alt="Postmodern Company" />
-      </a>
-      <a href="http://next100coalition.org/">
-        <img src="/assets/logos/next100.jpg" alt="Next100 Coalition" />
-      </a>
-      <a href="http://getharmonic.com/">
-        <img src="/assets/logos/harmonic.png" alt="Harmonic Media" />
-      </a>
-    </div>
+    <p class="sponsor-copy">
+      And a very special thanks to all who rolled-up their sleeves in building Trade School: <a href="http://www.citywild.org/">cityWILD</a>, <a href="https://meetatct.com/">Center Table</a>, <a href="http://groundfloormedia.com/">Ground Floor Media</a>, <a href="http://www.oskarblues.com/">Oskar Blues</a>, <a href="http://drumbeat.us/">Drumbeat</a>, <a href="https://choosecolorado.com/">Colorado Office of Economic Development and International Trade</a>, <a href="https://www.thecommons.co/">The Commons on Champa</a>. And <a href="https://novocoffee.com/">Novo Coffee</a>. <a href="https://outdoorindustry.org/">Outdoor Industry Association (OIA)</a>. <a href="https://www.snowsports.org/">SnowSports Industries America (SIA)</a>. And <a href="https://www.denver.org/">Visit Denver</a>.
+    </p>
   </div>
-  <p class="sponsor-copy">
-    And a very special thanks to all who rolled-up their sleeves in building Trade School: <a href="http://www.citywild.org/">cityWILD</a>, <a href="https://meetatct.com/">Center Table</a>, <a href="http://groundfloormedia.com/">Ground Floor Media</a>, <a href="http://www.oskarblues.com/">Oskar Blues</a>, <a href="http://drumbeat.us/">Drumbeat</a>, <a href="https://choosecolorado.com/">Colorado Office of Economic Development and International Trade</a>, <a href="https://www.thecommons.co/">The Commons on Champa</a>. And <a href="https://novocoffee.com/">Novo Coffee</a>. <a href="https://outdoorindustry.org/">Outdoor Industry Association (OIA)</a>. <a href="https://www.snowsports.org/">SnowSports Industries America (SIA)</a>. And <a href="https://www.denver.org/">Visit Denver</a>.
-  </p>
 </div>
