--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,6 +1,6 @@
 <header class="site-header" role="banner">
   <div class="wrapper">
-    <h1 class="site-title">Trade School</h1>
+    <a href="{{ site.baseurl }}" class="site-title">Trade School</a>
     <h3 class="site-subtitle">Exploring the nature of work</h1>
   </div>
 
