--- a/_sass/minima/_layout.scss
+++ b/_sass/minima/_layout.scss
@@ -1,6 +1,7 @@
 .site-header {
   background-color: $navy-color;
   position: relative;
+  z-index: 1;
 }
 
 .site-header:before {
@@ -17,36 +18,76 @@
   background-position: center center;
   background-repeat: no-repeat;
   background-size: cover;
+  z-index: 5;
 }
 
 .site-title {
-  font-size: ms(5);
+  position: relative;
+  font-size: ms(9);
   font-family: $heading-font-family;
   font-weight: $heading-font-weight;
   line-height: 1;
-  padding: $spacing-unit 0 $spacing-unit / 2 0;
+  padding: $spacing-unit * 2 0 $spacing-unit / 2 0;
   text-align: center;
   color: $background-color;
+  z-index: 10;
+}
+
+.site-subtitle {
+  position: relative;
+  font-size: ms(3);
+  font-family: $base-font-family;
+  font-weight: 100;
+  line-height: 1;
+  // padding: $spacing-unit 0 $spacing-unit / 2 0;
+  text-align: center;
+  text-transform: uppercase;
+  color: $background-color;
+  z-index: 10;
+}
+
+.site-attribution {
+  position: relative;
+  text-align: right;
+  z-index: 10;
+  width: 100%;
+  padding-bottom: $spacing-unit;
+
+  @include media-query($on-palm) {
+    text-align: center;
+    padding-bottom: $spacing-unit / 2;
+  }
+
+  a {
+    margin: 0 $spacing-unit 0 0;
+    font-size: ms(-1);
+    font-family: $base-font-family;
+    font-weight: 100;
+    line-height: 1;
+    color: $background-color;
+    text-transform: uppercase;
+    text-decoration: none;
+
+    @include media-query($on-palm) {
+      margin: 0;
+    }
+  }
+
+  img {
+    display: inline;
+    height: 2.5em;
+    padding-left: 1em;
+  }
 }
 
 .site-tagline {
   text-align: center;
   background-color: $aqua-color;
   color: $background-color;
-  font-size: ms(2);
+  font-size: ms(3);
   font-family: $heading-font-family;
   font-weight: $heading-font-weight;
   padding: $spacing-unit / 2 0;
-}
-
-.intro-logo {
-  display: block;
-  margin: $spacing-unit auto;
-  width: 33%;
-
-  @include media-query($on-palm) {
-    width: 80%;
-  }
 }
 
 /**
