--- a/_sass/minima/_layout.scss
+++ b/_sass/minima/_layout.scss
@@ -281,10 +281,12 @@
 .sponsor-logos {
   a {
     margin: $spacing-unit / 2 $spacing-unit / 2;
+    text-align: center;
+    vertical-align: middle;
   }
 
   img {
-    width: 100%;
+    width: 70%;
   }
 
   .logo-row-1up, .logo-row-2up, .logo-row-3up {
