S|I is not HTTPS

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -5,7 +5,7 @@
   </div>
 
   <div class="site-attribution">
-    <a href="https://www.somethingindependent.com/">
+    <a href="http://www.somethingindependent.com/">
       A project of <img src="/assets/si_logo_white.png" />
     </a>
   </div>
