Adjust e-mail form to a single line
Tighten up spacing around it too

--- a/_includes/mailchimp.html
+++ b/_includes/mailchimp.html
@@ -1,5 +1,5 @@
 <section class="email-form">
-  <h2 class="form-header">Sign Up Here For Trade School News &amp; Session Updates</h2>
+  <h2 class="form-header">Sign Up For Trade School News &amp; Session Updates</h2>
 
   <!-- Begin MailChimp Signup Form -->
   <div id="mc_embed_signup">
