--- a/_sass/minima/_layout.scss
+++ b/_sass/minima/_layout.scss
@@ -138,7 +138,7 @@
   color: $background-color;
   background-color: $aqua-color;
   text-align: center;
-  margin: $spacing-unit 0;
+  margin: 0 0 $spacing-unit 0;
   padding: $spacing-unit / 2 0;
   font-size: ms(4);
   font-family: $heading-font-family;
@@ -155,9 +155,9 @@
  */
 
 .email-form {
-  margin: auto;
+  margin: $spacing-unit auto auto auto;
   text-align: center;
-  width: 60%;
+  width: 70%;
 
   @include media-query($on-palm) {
     margin: auto 0;
@@ -167,10 +167,20 @@
 
 .email-form .form-header {
   font-size: ms(2);
+  margin: 0;
 }
 
 .email-form form {
   margin: auto 0;
+}
+
+// These two come from Mailchimp's horizontal-slim default styling
+.mc-field-group {
+  display: inline-block;
+}
+
+#mc_embed_signup .clear {
+  display: inline-block;
 }
 
 .email-form input[type="email"] {
