Add logo alt text for S|I bug

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -5,8 +5,8 @@
   </div>
 
   <div class="site-attribution">
-    <a href="http://www.somethingindependent.com/">
-      A project of <img src="/assets/si_logo_white.png" />
+    <a href="http://www.somethingindependent.com/" title="A project of Something Independent">
+      A project of <img src="/assets/si_logo_white.png" alt="Something Independent" />
     </a>
   </div>
 </header>
