--- a/_sass/minima/_base.scss
+++ b/_sass/minima/_base.scss
@@ -90,24 +90,17 @@ h1, h2, h3, h4, h5, h6 {
  * Links
  */
 a {
-  color: $brand-color;
+  color: $text-color;
   text-decoration: none;
 
   &:visited {
-    color: darken($brand-color, 15%);
+    color: $text-color;
   }
 
   &:hover {
-    color: $text-color;
+    // color: lighten($text-color, 10%);
+    color: $aqua-color;
     text-decoration: underline;
-  }
-
-  .social-media-list &:hover {
-    text-decoration: none;
-
-    .username {
-      text-decoration: underline;
-    }
   }
 }
 
