--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -5,6 +5,10 @@
 
     {% include mailchimp.html %}
 
+    <div class="social-widgets">
+      <iframe src="https://www.facebook.com/plugins/page.php?href=https%3A%2F%2Fwww.facebook.com%2Fsomethingindependent&tabs=timeline&width=340&height=500&small_header=true&adapt_container_width=true&hide_cover=false&show_facepile=true&appId" width="340" height="500" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true"></iframe>
+    </div>
+
   </div>
 
 </footer>
