Move the date into the subhead space

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -9,4 +9,11 @@
       A project of <img src="/assets/si_logo_white.png" alt="Something Independent" />
     </a>
   </div>
+
 </header>
+
+<section class="site-tagline">
+  <div class="wrapper">
+    January 24 &mdash; 28, 2018
+  </div>
+</section>
