--- a/_layouts/talk.html
+++ b/_layouts/talk.html
@@ -1,13 +1,12 @@
 ---
 layout: default
+exclude_tagline: true
 ---
 
-<div class="content-section-header">
-  {{ page.date | date: "%A, %-m/%-d" }}
-</div>
+<h1 class="content-section-header">{{ page.date | date: "%A, %-m/%-d" }}</h1>
 <div class="wrapper">
   <section class="content-section">
-    <h1>{{ page.title }}</h1>
+    <h2>{{ page.title }}</h2>
     <h3>With {{ page.hostedby }}</h3>
     {{ page.content }}
     <h4><a href="{{ site.baseurl }}#schedule">&larr; back to schedule</a></h4>
