--- a/_layouts/talk.html
+++ b/_layouts/talk.html
@@ -9,7 +9,7 @@ exclude_tagline: true
     <h2>{{ page.title }}</h2>
     <h3>With {{ page.hostedby }}</h3>
     {{ page.content }}
-    <h4><a href="{{ site.baseurl }}#schedule">&larr; back to schedule</a></h4>
+    <h4><a href="{{ "/" | relative_url }}#schedule">&larr; back to schedule</a></h4>
   </section>
 </div>
 
