Update session descriptions and titles

--- a/_layouts/talk.html
+++ b/_layouts/talk.html
@@ -3,11 +3,10 @@ layout: default
 exclude_tagline: true
 ---
 
-<h1 class="content-section-header">{{ page.date | date: "%A, %-m/%-d" }}</h1>
+<h1 class="content-section-header">{{ page.date | date: "%A, %B %d at %-I:%M%P" }}</h1>
 <div class="wrapper">
   <section class="content-section">
     <h2>{{ page.title }}</h2>
-    <h3>With {{ page.hostedby }}</h3>
     {{ page.content }}
     <h4><a href="{{ "/" | relative_url }}#schedule">&larr; back to schedule</a></h4>
   </section>
