Redo next100 logo in higher resolution

--- a/_includes/sponsors.html
+++ b/_includes/sponsors.html
@@ -37,7 +37,7 @@
           <img src="/assets/logos/postmodern.png" alt="Postmodern Company" />
         </a>
         <a href="http://next100coalition.org/">
-          <img src="/assets/logos/next100.jpg" alt="Next100 Coalition" />
+          <img src="/assets/logos/next100.png" alt="Next100 Coalition" />
         </a>
         <a href="http://getharmonic.com/">
           <img src="/assets/logos/harmonic.png" alt="Harmonic Media" />
