Add The Commons logo

--- a/_includes/sponsors.html
+++ b/_includes/sponsors.html
@@ -43,6 +43,10 @@
           <img src="/assets/logos/harmonic.png" alt="Harmonic Media" />
         </a>
       </div>
+      <div class="logo-row-3up">
+        <a href="http://thecommons.co/">
+          <img src="/assets/logos/the-commons.png" alt="The Commons on Champa" />
+        </a>
     </div>
     <p class="sponsor-copy">
       And a very special thanks to all who rolled-up their sleeves in building Trade School: <a href="http://www.citywild.org/">cityWILD</a>, <a href="https://meetatct.com/">Center Table</a>, <a href="http://groundfloormedia.com/">Ground Floor Media</a>, <a href="http://www.oskarblues.com/">Oskar Blues</a>, <a href="http://drumbeat.us/">Drumbeat</a>, <a href="https://choosecolorado.com/">Colorado Office of Economic Development and International Trade</a>, <a href="https://www.thecommons.co/">The Commons on Champa</a>. And <a href="https://novocoffee.com/">Novo Coffee</a>. <a href="https://outdoorindustry.org/">Outdoor Industry Association (OIA)</a>. <a href="https://www.snowsports.org/">SnowSports Industries America (SIA)</a>. And <a href="https://www.denver.org/">Visit Denver</a>.
