Open most external links in new windows

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -4,7 +4,7 @@
     <h3 class="site-subtitle">Exploring the nature of work</h1>
   </div>
   <div class="site-attribution">
-    <a href="http://www.somethingindependent.com/" title="A project of Something Independent">
+    <a href="http://www.somethingindependent.com/" title="A project of Something Independent" target="_blank">
       A project of <img src="/assets/si_logo_white.png" alt="Something Independent" />
     </a>
   </div>
