--- a/_includes/artists.html
+++ b/_includes/artists.html
@@ -2,11 +2,11 @@ Three artists have come together to create the backdrop of Trade School. Playing
 
 <div class="artists-container">
   <div class="artist-cell">
-    <a href="http://sarahuhl.com/" class="artist-photo">
+    <a href="http://sarahuhl.com/" class="artist-photo" target="_blank">
       <img src="/assets/sarah-uhl.jpg" alt="Sarah Uhl" />
     </a>
     <div class="artist-description">
-      <h3><a href="http://sarahuhl.com/">Sarah Virginia Uhl</a></h3>
+      <h3><a href="http://sarahuhl.com/" target="_blank">Sarah Virginia Uhl</a></h3>
       <div class="artist-tagline">Joy evangelist on a hunt for adventure through art and advocacy for the land</div>
       <p>
         Sarah Uhl is an artist and advocate for the land, based out of Carbondale, Colorado. She is dedicated to making art that plays a role in the protection of public lands, clean water and climate issues. Sarah partners with brands and organizations who would like to amplify their messaging through art, visual storytelling and Live Art performances at festivals and events.
@@ -15,11 +15,11 @@ Three artists have come together to create the backdrop of Trade School. Playing
   </div>
 
   <div class="artist-cell">
-    <a href="http://jackludlam.com/" class="artist-photo">
+    <a href="http://jackludlam.com/" class="artist-photo" target="_blank">
       <img src="/assets/jack-ludlam.jpg" alt="Jack Ludlam" />
     </a>
     <div class="artist-description">
-      <h3><a href="http://www.jackludlam.com/">Jack Ludlam</a></h3>
+      <h3><a href="http://www.jackludlam.com/" target="_blank">Jack Ludlam</a></h3>
       <div class="artist-tagline">Dedicated to the makers and their tools</div>
       <p>
         Jack Ludlam is a photographer based out of Denver, Colorado. Jack’s photographs primarily focus on the people and objects that represent a different generation of the proletariat. Jack has been interested in the traditional meaning of "work" since growing up on farms in Ohio.
@@ -28,11 +28,11 @@ Three artists have come together to create the backdrop of Trade School. Playing
   </div>
 
   <div class="artist-cell">
-    <a href="http://johnfellowsart.com/" class="artist-photo">
+    <a href="http://johnfellowsart.com/" class="artist-photo" target="_blank">
       <img src="/assets/john-fellows.jpg" alt="John Fellows" />
     </a>
     <div class="artist-description">
-      <h3><a href="http://johnfellowsart.com/">John Fellows</a></h3>
+      <h3><a href="http://johnfellowsart.com/" target="_blank">John Fellows</a></h3>
       <div class="artist-tagline">Travel, Art, Mountains and Water</div>
       <p>
         John Fellows' signature "contemporary folk" style weaves together layers of found paper, graphic block prints and handwritten text to create an old time, hands-on feel. He collects a variety of found paper, maps and books dating from the 1880s to the present to create unique linoleum carving collages that while at the very base reflect his personal experiences, are more like a brief glimpse into someone else’s story.
