--- a/_includes/sponsors.html
+++ b/_includes/sponsors.html
@@ -4,53 +4,53 @@
 <div class="wrapper">
   <div class="content-section">
     <p class="centered-copy">
-      TRADE SCHOOL is presented by <a href="http://www.somethingindependent.com/">Something Independent</a> and made possible through the support of hard working partners, including:
+      TRADE SCHOOL is presented by <a href="http://www.somethingindependent.com/" target="_blank">Something Independent</a> and made possible through the support of hard working partners, including:
     </p>
 
     <div class="sponsor-logos">
       <div class="logo-row-1up">
-        <a href="https://choosecolorado.com/programs-initiatives/outdoor-recreation-industry-office/">
+        <a href="https://choosecolorado.com/programs-initiatives/outdoor-recreation-industry-office/" target="_blank">
           <img src="/assets/logos/orec.png" alt="Colorado Outdoor Recreation Industry Office" />
         </a>
       </div>
       <div class="logo-row-2up">
-        <a href="http://denvertheatredistrict.com/">
+        <a href="http://denvertheatredistrict.com/" target="_blank">
           <img src="/assets/logos/dtd.png" alt="Denver Theatre District" />
         </a>
-        <a href="http://wework.com/">
+        <a href="http://wework.com/" target="_blank">
           <img src="/assets/logos/wework.png" alt="WeWork" />
         </a>
       </div>
       <div class="logo-row-3up">
-        <a href="http://larimersquare.com/">
+        <a href="http://larimersquare.com/" target="_blank">
           <img src="/assets/logos/larimer-square.png" alt="Larimer Square" />
         </a>
-        <a href="http://tapinco.org/">
+        <a href="http://tapinco.org/" target="_blank">
           <img src="/assets/logos/tapin.png" alt="Tap-IN" />
         </a>
-        <a href="https://www.nblenergy.com/">
+        <a href="https://www.nblenergy.com/" target="_blank">
           <img src="/assets/logos/noble-energy.jpg" alt="Noble Energy" />
         </a>
       </div>
       <div class="logo-row-3up">
-        <a href="http://postmodernco.com/">
+        <a href="http://postmodernco.com/" target="_blank">
           <img src="/assets/logos/postmodern.png" alt="Postmodern Company" />
         </a>
-        <a href="http://next100coalition.org/">
+        <a href="http://next100coalition.org/" target="_blank">
           <img src="/assets/logos/next100.png" alt="Next100 Coalition" />
         </a>
-        <a href="http://getharmonic.com/">
+        <a href="http://getharmonic.com/" target="_blank">
           <img src="/assets/logos/harmonic.png" alt="Harmonic Media" />
         </a>
       </div>
       <div class="logo-row-3up">
-        <a href="http://thecommons.co/">
+        <a href="http://thecommons.co/" target="_blank">
           <img src="/assets/logos/the-commons.png" alt="The Commons on Champa" />
         </a>
       </div>
     </div>
     <p class="sponsor-copy">
-      And a very special thanks to all who rolled-up their sleeves in building Trade School: <a href="http://www.citywild.org/">cityWILD</a>, <a href="https://meetatct.com/">Center Table</a>, <a href="http://groundfloormedia.com/">Ground Floor Media</a>, <a href="http://www.oskarblues.com/">Oskar Blues</a>, <a href="http://drumbeat.us/">Drumbeat</a>, <a href="https://choosecolorado.com/">Colorado Office of Economic Development and International Trade</a>, <a href="https://www.thecommons.co/">The Commons on Champa</a>. And <a href="https://novocoffee.com/">Novo Coffee</a>. <a href="https://outdoorindustry.org/">Outdoor Industry Association (OIA)</a>. <a href="https://www.snowsports.org/">SnowSports Industries America (SIA)</a>. And <a href="https://www.denver.org/">Visit Denver</a>.
+      And a very special thanks to all who rolled-up their sleeves in building Trade School: <a href="http://www.citywild.org/" target="_blank">cityWILD</a>, <a href="https://meetatct.com/" target="_blank">Center Table</a>, <a href="http://groundfloormedia.com/" target="_blank">Ground Floor Media</a>, <a href="http://www.oskarblues.com/" target="_blank">Oskar Blues</a>, <a href="http://drumbeat.us/" target="_blank">Drumbeat</a>, <a href="https://choosecolorado.com/" target="_blank">Colorado Office of Economic Development and International Trade</a>, <a href="https://www.thecommons.co/" target="_blank">The Commons on Champa</a>, <a href="https://novocoffee.com/" target="_blank">Novo Coffee</a>, <a href="https://outdoorindustry.org/" target="_blank">Outdoor Industry Association (OIA)</a>, <a href="https://www.snowsports.org/" target="_blank">SnowSports Industries America (SIA)</a>, and <a href="https://www.denver.org/" target="_blank">Visit Denver</a>.
     </p>
   </div>
 </div>
