Rearrange/rename Sponsors section
Add S:I and Understudy

--- a/_includes/sponsors.html
+++ b/_includes/sponsors.html
@@ -1,10 +1,16 @@
 <div class="content-section-header">
-  <a name="sponsors">Sponsors</a>
+  <a name="partners">Partners</a>
 </div>
 <div class="wrapper">
   <div class="content-section">
+    <div class="partner-si-logo">
+      <a href="http://www.somethingindependent.com/" target="_blank">
+        <img src="/assets/si_logo_transparent.png" />
+      </a>
+    </div>
+
     <p class="centered-copy">
-      TRADE SCHOOL is presented by <a href="http://www.somethingindependent.com/" target="_blank">Something Independent</a> and made possible through the support of hard working partners, including:
+      Made possible through the support of our hard-working partners:
     </p>
 
     <div class="sponsor-logos">
@@ -13,12 +19,15 @@
           <img src="/assets/logos/orec.png" alt="Colorado Outdoor Recreation Industry Office" />
         </a>
       </div>
-      <div class="logo-row-2up">
+      <div class="logo-row-3up">
         <a href="http://denvertheatredistrict.com/" target="_blank">
           <img src="/assets/logos/dtd.png" alt="Denver Theatre District" />
         </a>
         <a href="http://wework.com/" target="_blank">
           <img src="/assets/logos/wework.png" alt="WeWork" />
+        </a>
+        <a href="http://understudydenver.com/" target="_blank">
+          <img src="/assets/logos/understudy.png" alt="Understudy | Denver" />
         </a>
       </div>
       <div class="logo-row-3up">
