--- a/_includes/sponsors.html
+++ b/_includes/sponsors.html
@@ -5,7 +5,7 @@
   <div class="content-section">
     <div class="partner-si-logo">
       <a href="http://www.somethingindependent.com/" target="_blank">
-        <img src="/assets/si_logo_transparent.png" />
+        <img src="/assets/si_logo_transparent.png" alt="A project of Something Independent" />
       </a>
     </div>
 
