--- a/_includes/head.html
+++ b/_includes/head.html
@@ -7,4 +7,5 @@
   {% if jekyll.environment == 'production' and site.google_analytics %}
     {% include google-analytics.html %}
   {% endif %}
+  <script src="https://use.fontawesome.com/a2e9fc9d41.js"></script>
 </head>
