--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,4 +1,9 @@
 <header class="site-header" role="banner">
+  <div class="site-social">
+    <a href="https://www.facebook.com/SomethingIndependent/" target="_blank"><i class="fa fa-facebook fa-2x"></i></a>
+    <a href="https://instagram.com/somethingindependent" target="_blank"><i class="fa fa-instagram fa-2x"></i></a>
+    <a href="https://twitter.com/somethingindpnt" target="_blank"><i class="fa fa-twitter fa-2x"></i></a>
+  </div>
   <div class="wrapper">
     <a href="{{ "/" | relative_url }}" class="site-title">Trade School</a>
     <h3 class="site-subtitle">Exploring the nature of work</h1>
@@ -8,7 +13,6 @@
       A project of <img src="/assets/si_logo_white.png" alt="Something Independent" />
     </a>
   </div>
-
 </header>
 
 {% unless layout.exclude_tagline %}
