--- a/_includes/header.html
+++ b/_includes/header.html
@@ -9,7 +9,7 @@
     <h3 class="site-subtitle">Exploring the nature of work</h1>
   </div>
   <div class="site-attribution">
-    <a href="http://www.somethingindependent.com/" title="A project of Something Independent" target="_blank">
+    <a href="#about" title="A project of Something Independent">
       A project of <img src="/assets/si_logo_white.png" alt="Something Independent" />
     </a>
   </div>
