--- a/_includes/sponsors.html
+++ b/_includes/sponsors.html
@@ -4,7 +4,7 @@
 <div class="wrapper">
   <div class="content-section">
     <div class="partner-si-logo">
-      <a href="http://www.somethingindependent.com/" target="_blank">
+      <a href="#about">
         <img src="/assets/si_logo_transparent.png" alt="A project of Something Independent" />
       </a>
     </div>
