Update schedule formatting

--- a/_sass/minima/_layout.scss
+++ b/_sass/minima/_layout.scss
@@ -359,3 +359,9 @@
   margin: $spacing-unit auto;
   text-align: center;
 }
+
+.disclaimer {
+  font-size: ms(-1);
+  font-style: italic;
+  line-height: 1;
+}
